<resources>
    <string name="app_name">Assignment2</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="total">Price : 2.34</string>
    <string name="fiveprice">$5 :0</string>
    <string name="twenty">$20 :0</string>
    <string name="ten">$10 :0</string>
    <string name="oneprice">$1 :2</string>
    <string name="twentyfivecents">25@ :1</string>
    <string name="tencents">10@ :0</string>
    <string name="fivecents">5@ :1</string>
    <string name="onecents">1@ :4</string>
</resources>